--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,69 @@
-* {
-    padding: 0;
-    margin: 0;
-    background-color: white;
-    
+*, *::before, *::after {
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body {
+    margin:0;
+    padding:0;
+}
+.background {
+    /* background-color: white; */
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.timer-container {
+    background-color: darkgrey;
+    height: 300px;
+    width: 600px;
+    border-radius: 15px;
+}
+.prompt-container {
+    color: white;
+    background-color: darkslategrey;
+    box-shadow: 0 0 30px;
+    /* height: 100; */
+    width: 80%;
+    max-width: 600px;
+    background-size: cover;
+    background-position: center;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    padding: 30px 20px;
+    gap: 10px;
+}
+.login {
+    padding: 40px;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 15px;
+    border: none;
+    color: white;
+    font-weight: normal;
+}
+.login-title {
+    margin:0;
+    color: white;
+    text-align: center;
+
+}
+.form {
+    display: flex;
+    flex-direction: column;
+    color:white;
+    gap: 20px;
+}
+.input-group {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+}
+.input-group label {
+    color: white;
+    font-weight: lighter;
 }
