--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,38 @@
 *, *::before, *::after {
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
-body {
     margin:0;
     padding:0;
+    list-style: none;
+    text-decoration: none;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    scroll-behavior: smooth;
+}
+body {
+    background-color:black;
+    /* display:flex; */
+    /* flex-direction:  */
+
+    /* justify-content: center; */
+}
+a {
+    color: white;
+    text-decoration: none;
+}
+#loginbar {
+    position: fixed;
+    width: 100%;
+    height: 200px;
+    background-color: #222222;
+    color:lightgrey;
+    border-radius: 10px;
+    align-content: center;
+    /* gap: 1px 0 1px 0; */
+}
+#navbar {
+    /* position: fixed; */
+    width: 100%;
+    height: 100px;
+    background-color: #666666;
 }
 .background {
     /* background-color: white; */
@@ -15,12 +43,12 @@ body {
     justify-content: center;
     align-items: center;
 }
-.timer-container {
-    background-color: darkgrey;
+/* .timer-container { */
+    /* background-color: darkgrey;
     height: 300px;
     width: 600px;
     border-radius: 15px;
-}
+} */
 .prompt-container {
     color: black;
     background-color: rgb(90, 90, 90);
